# NodeIQ-Codex

./: .gitignore  README.md
.github/: copilot-instructions.md
docs/: README.md
docs/ui/: components.md  figma_prompt.md  flows.md  screens.md  style-guide.md
nodeiq/: README.md
nodeiq-android/.github/workflows/: android-ci.yml  rust-ci.yml
nodeiq-android/android/: .gitignore  build.gradle.kts  settings.gradle.kts
nodeiq-android/android/app/: build.gradle.kts
nodeiq-android/android/app/src/main/: AndroidManifest.xml
nodeiq-android/android/app/src/main/assets/: appsettings.json
nodeiq-android/broker/: README.md  aclfile  docker-compose.yml  mosquitto.conf
nodeiq-android/broker-api/: BrokerApi.csproj  Program.cs  README.md  appsettings.json
nodeiq-android/broker-api/Controllers/: AccountsController.cs  MeteringController.cs  PaymentsController.cs  PricingController.cs
nodeiq-android/broker-api/Data/: BrokerDb.cs  Entities.cs
nodeiq-android/broker/scripts/: gen-certs.sh
nodeiq-android/docs/: ARCHITECTURE.md  LIBP2P_NOTES.md  MARKETPLACE.md  MQTT_TOPICS.md  PROTOCOL.md  RAG_PIPELINE.md  README.md  SECURITY.md
nodeiq-android/native/llama/: CMakeLists.txt  THIRD_PARTY.md
nodeiq-android/native/llama/include/: llama.h
nodeiq-android/native/llama/src/: llama_bridge.cpp
nodeiq-android/native/onnx/: README.md
nodeiq-android/rust/core_p2p/: Cargo.toml  build.rs
nodeiq-android/rust/core_p2p/proto/: kmarket.proto
nodeiq-android/rust/core_p2p/src/: events.rs  lib.rs  node.rs  protocol.rs  rendezvous.rs
nodeiq-android/rust/ffi/: Cargo.toml
nodeiq-android/rust/ffi/src/: lib.rs
nodeiq-android/tools/: build-android.sh  build-ndk-llama.sh  build-rust-android.sh  download-models.sh  run-broker-api.sh  run-broker.sh
nodeiq/.github/workflows/: android-ci.yml  rust-ci.yml
nodeiq/android/: build.gradle.kts  settings.gradle.kts
nodeiq/android/app/: build.gradle.kts  google-services.json  proguard-rules.pro
nodeiq/android/app/src/main/: AndroidManifest.xml
nodeiq/android/app/src/main/assets/: appsettings.json
nodeiq/android/ndk/: toolchain-setup.md
nodeiq/broker/: aclfile  docker-compose.yml  mosquitto.conf
nodeiq/broker/certs/: README.md
nodeiq/docs/: ARCHITECTURE.md  LIBP2P_NOTES.md  MQTT_TOPICS.md  PROTOCOL.md  README.md  SECURITY.md
nodeiq/rust/bootstrap/: Cargo.toml  Dockerfile  README.md
nodeiq/rust/bootstrap/src/: main.rs
nodeiq/rust/core_p2p/: Cargo.toml  build.rs
nodeiq/rust/core_p2p/proto/: kmarket.proto
nodeiq/rust/core_p2p/src/: codec.rs  events.rs  lib.rs  node.rs  protocol.rs  rendezvous.rs  utils.rs
nodeiq/rust/ffi/: Cargo.toml  build.rs
nodeiq/rust/ffi/include/: nodeiq_p2p.h
nodeiq/rust/ffi/src/: lib.rs
nodeiq/tools/scripts/: build-android.sh  build-bootstrap.sh  build-rust-android.sh  gen-certs.sh  run-broker.sh  test-e2e.sh
(+70 files in other folders)
