[package]
name = "nodeiq-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "nodeiq_p2p"
crate-type = ["cdylib"]

[dependencies]
nodeiq-core-p2p = { path = "../core_p2p" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
lazy_static = "1.4"
futures = "0.3"

[build-dependencies]
cc = "1.0"
