[package]
name = "nodeiq-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "nodeiq_p2p"
crate-type = ["cdylib"]

[dependencies]
nodeiq-core-p2p = { path = "../core_p2p" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"

[build-dependencies]
cbindgen = "0.26"

[features]
default = []
